# ignorelib

./: .clang-format  .clang-format-ignore  .gitignore  .pre-commit-config.yaml  ATTRIBUTION.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  codeql.yml  greetings.yml  pre-commit-action.yml
cmake/: automate-vcpkg.cmake  ignorelib-config.cmake.in  utils.cmake
examples/: CMakeLists.txt
include/ignorelib/: file.h  ignorelib.h  pattern.h  pattern_list.h
include/ignorelib/internal/: ignoreutils.h
src/: file.cpp  ignorelib.cpp  pattern_list.h
src/internal/: ignoreutils.cpp
tests/: CMakeLists.txt  test_converter.cpp  test_ignore.cpp  test_load.cpp  test_load_file_constants.h
